--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^6.5.2",
+    "mongoose": "^6.6.6",
+    "nodemon": "^2.0.20",
     "underscore": "^1.13.3"
   }
 }
